--- a/index.html
+++ b/index.html
@@ -1,10 +1,102 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html>
- 
+<head>
+    <title>Webite Style Guide</title>
+    <link rel="stylesheet" href="resources/index.css" />
+</head>
 <body>
-  <h1>SpicyTyci</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <h1>Website Style Guide</h1>
+
+  <!-- Colours-->
+
+  <div class="container">
+    <h2 class="colour-title">Colours</h2>
+    <div class="colour-container">
+      <div class="colour-panel maroon">
+         <p class="colour-label">Maroon</p>
+         <p class="colour-hex">#5A0000</p>
+      </div>
+      <div class="colour-panel light-maroon">
+         <p class="colour-label">Light Maroon</p>
+         <p class="colour-hex">#C17171</p>
+      </div>
+      <div class="colour-panel red">
+         <p class="colour-label">Red</p>
+         <p class="colour-hex">#FF0000</p>
+      </div>
+      <div class="colour-panel black">
+        <p class="colour-label">Black</p>
+        <p class="colour-hex">#000000</p>
+     </div>
+      <div class="colour-panel gray">
+         <p class="colour-label">Gray</p>
+         <p class="colour-hex">#222222</p>
+      </div>
+      <div class="colour-panel white">
+         <p class="colour-label">White</p>
+         <p class="colour-hex">#FFFFFF</p>
+      </div>
+    </div>
+  </div>
+
+<!--Fonts-->
+
+  <div class="container">
+    <h2 class="fonts-title">Fonts</h2>
+    <div class="fonts-container">
+         <div class="font-panel arial">
+            <p class="font-label arial">Arial</p>
+            <p class="regular arial">The quick brown fox jumps over the lazy dog</p>
+            <p class="bold arial">The quick brown fox jumps over the lazy dog</p>
+            <p class="italic arial">The quick brown fox jumps over the lazy dog</p>
+         </div>
+         <div class="font-panel helvetica">
+            <p class="font-label helvetica">Helvetica</p>
+            <p class="regular helvetica">The quick brown fox jumps over the lazy dog</p>
+            <p class="bold helvetica">The quick brown fox jumps over the lazy dog</p>
+            <p class="italic helvetica">The quick brown fox jumps over the lazy dog</p>
+         </div>
+         <div class="font-panel sans-serif">
+            <p class="font-label sans-serif">Sans Serif</p> 
+            <p class="regular sans-serif">The quick brown fox jumps over the lazy dog</p>
+            <p class="bold sans-serif">The quick brown fox jumps over the lazy dog</p>
+            <p class="italic sans-serif">The quick brown fox jumps over the lazy dog</p>
+         </div>
+    </div>
+  </div>
+  
+  <!--Text Styles-->
+
+  <div class="container">
+    <h2 class="text-styles title">Text Styles</h2>
+    <div class="text-styles container">
+        <div class="text-panel">
+            <h1>H1: Main page heading</h1>
+            <ul>
+              <li>Font-weight: 700 (bold)</li>
+              <li>Font-size: 26px</li>
+              <li>Font-family: Helvetica</li>
+            </ul>
+          </div>
+          <div class="text-panel">
+            <h2>H2: Subheading</h2>
+            <ul>
+              <li>Font-weight: 500</li>
+              <li>Font-size: 18px</li>
+              <li>Font-family: Helvetica</li>
+            </ul>
+          </div>
+          <div class="text-panel">
+            <p>P: Paragraph text</p>
+            <ul>
+              <li>Font-weight: 400 (regular)</li>
+              <li>Font-size: 14px</li>
+              <li>Font-family: Arial</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> 
 </body>
- 
 </html>
